@@ -68,7 +68,6 @@ python-extension libtorrent
     src/version.cpp
     src/alert.cpp
     src/datetime.cpp
-    src/torrent.cpp
     src/peer_info.cpp
     src/ip_filter.cpp
     src/magnet_uri.cpp
