@@ -1,3 +1,4 @@
+	* python bindings fixes
 	* handle overlong utf-8 sequences
 	* fix bug in error handling in protocol encryption
 
